// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelector > should work onChang - second selector 1`] = `[Function]`;

exports[`optionSelector > should work onChange - first selector 1`] = `[Function]`;

exports[`optionSelector > should work readonly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0 styles_direction_horizontal__12opk3l1"
    >
      <label
        class="styles_default__17td3g90 styles__12opk3l4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Region
      </label>
      <div
        class="styles_horizontal__12opk3l6 styles__uf6pag0"
      >
        <div
          aria-controls="_r_2u_"
          aria-describedby="_r_2u_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_2u_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_readOnly_true__1ba7knd9 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="false"
              data-readonly="true"
              data-testid="first-selector"
              id="_r_2t_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_horizontal__12opk3la uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayStartArrow
        </title>
        <path
          clip-rule="evenodd"
          d="M2.5 10C2.5 9.61168 2.8148 9.29688 3.20312 9.29688L15.0063 9.29688L13.0372 7.46837C12.7526 7.20414 12.7361 6.75925 13.0004 6.47469C13.2646 6.19012 13.7095 6.17365 13.9941 6.43788L17.2753 9.48476C17.4186 9.6178 17.5 9.80449 17.5 10C17.5 10.1955 17.4186 10.3822 17.2753 10.5152L13.9941 13.5621C13.7095 13.8264 13.2646 13.8099 13.0004 13.5253C12.7361 13.2408 12.7526 12.7959 13.0372 12.5316L15.0063 10.7031L3.20313 10.7031C2.8148 10.7031 2.5 10.3883 2.5 10Z"
          fill-rule="evenodd"
        />
        <path
          d="M6.25 10C6.25 11.0355 5.41053 11.875 4.375 11.875C3.33947 11.875 2.5 11.0355 2.5 10C2.5 8.96447 3.33947 8.125 4.375 8.125C5.41053 8.125 6.25 8.96447 6.25 10Z"
        />
      </svg>
      <div
        class="styles_horizontal__12opk3l8 styles__uf6pag0"
      >
        <div
          aria-controls="_r_33_"
          aria-describedby="_r_33_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_33_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_readOnly_true__1ba7knd9 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="true"
              data-readonly="true"
              data-testid="second-selector"
              id="_r_32_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0 styles_direction_horizontal__12opk3l1"
    >
      <label
        class="styles_default__17td3g90 styles__12opk3l4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Region
      </label>
      <div
        class="styles_horizontal__12opk3l6 styles__uf6pag0"
      >
        <div
          aria-controls="_r_2_"
          aria-describedby="_r_2_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_2_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_1_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_horizontal__12opk3la uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayStartArrow
        </title>
        <path
          clip-rule="evenodd"
          d="M2.5 10C2.5 9.61168 2.8148 9.29688 3.20312 9.29688L15.0063 9.29688L13.0372 7.46837C12.7526 7.20414 12.7361 6.75925 13.0004 6.47469C13.2646 6.19012 13.7095 6.17365 13.9941 6.43788L17.2753 9.48476C17.4186 9.6178 17.5 9.80449 17.5 10C17.5 10.1955 17.4186 10.3822 17.2753 10.5152L13.9941 13.5621C13.7095 13.8264 13.2646 13.8099 13.0004 13.5253C12.7361 13.2408 12.7526 12.7959 13.0372 12.5316L15.0063 10.7031L3.20313 10.7031C2.8148 10.7031 2.5 10.3883 2.5 10Z"
          fill-rule="evenodd"
        />
        <path
          d="M6.25 10C6.25 11.0355 5.41053 11.875 4.375 11.875C3.33947 11.875 2.5 11.0355 2.5 10C2.5 8.96447 3.33947 8.125 4.375 8.125C5.41053 8.125 6.25 8.96447 6.25 10Z"
        />
      </svg>
      <div
        class="styles_horizontal__12opk3l8 styles__uf6pag0"
      >
        <div
          aria-controls="_r_7_"
          aria-describedby="_r_7_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_7_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_6_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default values 1`] = `[Function]`;

exports[`optionSelector > should work with direction vertical 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0 styles_direction_vertical__12opk3l2"
    >
      <div
        class="styles_vertical__12opk3l7 styles__uf6pag0"
      >
        <div
          aria-controls="_r_c_"
          aria-describedby="_r_c_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_b_"
            >
              Region
            </label>
            <div
              aria-controls="_r_c_"
              aria-expanded="false"
              aria-label="Region"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_b_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_vertical__12opk3lb uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayTopArrow
        </title>
        <path
          clip-rule="evenodd"
          d="M10 2.5C10.3883 2.5 10.7031 2.8148 10.7031 3.20312V15.0063L12.5316 13.0372C12.7959 12.7526 13.2408 12.7361 13.5253 13.0004C13.8099 13.2646 13.8264 13.7095 13.5621 13.9941L10.5152 17.2753C10.3822 17.4186 10.1955 17.5 10 17.5C9.80449 17.5 9.6178 17.4186 9.48476 17.2753L6.43788 13.9941C6.17365 13.7095 6.19012 13.2646 6.47469 13.0004C6.75925 12.7361 7.20414 12.7526 7.46837 13.0372L9.29688 15.0063V3.20312C9.29688 2.8148 9.61168 2.5 10 2.5Z"
          fill-rule="evenodd"
        />
        <path
          d="M11.875 4.375C11.875 5.41053 11.0355 6.25 10 6.25C8.96447 6.25 8.125 5.41053 8.125 4.375C8.125 3.33947 8.96447 2.5 10 2.5C11.0355 2.5 11.875 3.33947 11.875 4.375Z"
        />
      </svg>
      <div
        class="styles_vertical__12opk3l9 styles__uf6pag0"
      >
        <div
          aria-controls="_r_i_"
          aria-describedby="_r_i_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_h_"
            >
              Zone
            </label>
            <div
              aria-controls="_r_i_"
              aria-expanded="false"
              aria-label="Zone"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_h_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0 styles_direction_horizontal__12opk3l1"
    >
      <label
        class="styles_default__17td3g90 styles__12opk3l4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Region
      </label>
      <div
        class="styles_horizontal__12opk3l6 styles__uf6pag0"
      >
        <div
          aria-controls="_r_2j_"
          aria-describedby="_r_2j_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_2j_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="true"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_2i_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_horizontal__12opk3la uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayStartArrow
        </title>
        <path
          clip-rule="evenodd"
          d="M2.5 10C2.5 9.61168 2.8148 9.29688 3.20312 9.29688L15.0063 9.29688L13.0372 7.46837C12.7526 7.20414 12.7361 6.75925 13.0004 6.47469C13.2646 6.19012 13.7095 6.17365 13.9941 6.43788L17.2753 9.48476C17.4186 9.6178 17.5 9.80449 17.5 10C17.5 10.1955 17.4186 10.3822 17.2753 10.5152L13.9941 13.5621C13.7095 13.8264 13.2646 13.8099 13.0004 13.5253C12.7361 13.2408 12.7526 12.7959 13.0372 12.5316L15.0063 10.7031L3.20313 10.7031C2.8148 10.7031 2.5 10.3883 2.5 10Z"
          fill-rule="evenodd"
        />
        <path
          d="M6.25 10C6.25 11.0355 5.41053 11.875 4.375 11.875C3.33947 11.875 2.5 11.0355 2.5 10C2.5 8.96447 3.33947 8.125 4.375 8.125C5.41053 8.125 6.25 8.96447 6.25 10Z"
        />
      </svg>
      <div
        class="styles_horizontal__12opk3l8 styles__uf6pag0"
      >
        <div
          aria-controls="_r_2o_"
          aria-describedby="_r_2o_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_2o_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_2n_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDown
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with error - first selector 1`] = `[Function]`;

exports[`optionSelector > should work with error - second selector 1`] = `[Function]`;

exports[`optionSelector > should work with hideWhenEmpty 1`] = `[Function]`;

exports[`optionSelector > should work with only one option 1`] = `[Function]`;

exports[`optionSelector > should work without hideWhenEmpty 1`] = `[Function]`;
